Fix Find a Mentor page on IE #664

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -44,7 +44,11 @@ $nav-content-height: 60px;
   }
 }
 
-
 .navigation__content-wrapper {
   justify-content: space-between;
+}
+
+.navigation__links-list {
+  align-items: center;
+  display: flex;
 }
